# Mindset

./: .gitignore  CMakeLists.txt  README.md
cmake/: MindsetConfig.cmake.in  MnemeaConfig.cmake.in  version.h.in
include/mindset/: Activity.h  Circuit.h  Context.h  Contextualized.h  Dataset.h  DefaultProperties.h  EventSequence.h  Identifiable.h  Morphology.h  MorphologyTree.h  MorphologyTreeSection.h  MutexHolder.h  Neurite.h  Neuron.h  Node.h  Properties.h  PropertyHolder.h  Simulation.h  Soma.h  Synapse.h  TimeGrid.h  UID.h  Versioned.h
include/mindset/loader/: BlueConfigLoader.h  Loader.h  LoaderRegistry.h  LoaderStatus.h  MorphoIOLoader.h  SWCLoader.h  SnuddaActivityLoader.h  SnuddaLoader.h  XMLLoader.h
include/mindset/util/: Getters.h  MorphologyUtils.h  NeuronTransform.h  Result.h
include/mnemea/: Circuit.h  Dataset.h  DefaultProperties.h  Identifiable.h  Morphology.h  Neurite.h  Neuron.h  Node.h  Properties.h  PropertyHolder.h  Soma.h  Synapse.h  UID.h  Versioned.h
include/mnemea/loader/: BlueConfigLoader.h  BrionLoader.h  Loader.h  LoaderRegistry.h  LoaderStatus.h  MorphoIOLoader.h  SWCLoader.h  SnuddaLoader.h  XMLLoader.h
include/mnemea/util/: NeuronTransform.h  Result.h
src/: Activity.cpp  CMakeLists.txt  Circuit.cpp  Dataset.cpp  Identifiable.cpp  Morphology.cpp  MorphologyTree.cpp  MorphologyTreeSection.cpp  MutexHolder.cpp  Neurite.cpp  Neuron.cpp  Node.cpp  Properties.cpp  PropertyHolder.cpp  Simulation.cpp  Soma.cpp  Synapse.cpp  Versioned.cpp
src/loader/: BlueConfigLoader.cpp  BrionLoader.cpp  Loader.cpp  LoaderRegistry.cpp  MorphoIOLoader.cpp  SWCLoader.cpp  SnuddaActivityLoader.cpp  SnuddaLoader.cpp  XMLLoader.cpp
src/util/: MorphologyUtils.cpp  NeuronTransform.cpp
test/: CMakeLists.txt  brion.cpp  snudda.cpp  swc.cpp  test.cpp
test/data/: test.swc
